--- a/paper/references.bib
+++ b/paper/references.bib
@@ -71,17 +71,27 @@
 }
 
 @article{skorski2019chain,
-  title={Chain rules for hessian and higher derivatives made easy by tensor calculus},
-  author={Skorski, Maciej},
-  journal={arXiv preprint arXiv:1911.13292},
-  year={2019}
+  title =        {Chain rules for hessian and higher derivatives made easy by
+                  tensor calculus},
+  author =       {Skorski, Maciej},
+  journal =      {arXiv preprint arXiv:1911.13292},
+  year =         2019
 }
 
-@inproceedings{
-martens2018kroneckerfactored,
-title={Kronecker-factored Curvature Approximations for Recurrent Neural Networks},
-author={James Martens and Jimmy Ba and Matt Johnson},
-booktitle={International Conference on Learning Representations},
-year={2018},
-url={https://openreview.net/forum?id=HyMTkQZAb},
+@inproceedings{martens2018kroneckerfactored,
+  title =        {Kronecker-factored Curvature Approximations for Recurrent
+                  Neural Networks},
+  author =       {James Martens and Jimmy Ba and Matt Johnson},
+  booktitle =    {International Conference on Learning Representations},
+  year =         2018,
+  url =          {https://openreview.net/forum?id=HyMTkQZAb},
+}
+
+@inproceedings{eschenhagen2023kroneckerfactored,
+  title =        {Kronecker-Factored Approximate Curvature for Modern Neural
+                  Network Architectures},
+  author =       {Runa Eschenhagen and Alexander Immer and Richard E. Turner and
+                  Frank Schneider and Philipp Hennig},
+  booktitle =    {Advances in Neural Information Processing Systems (NeurIPS)},
+  year =         2023,
 }
