--- a/paper/neurips_2023.sty
+++ b/paper/neurips_2023.sty
@@ -1,22 +1,90 @@
+% partial rewrite of the LaTeX2e package for submissions to the
+% Conference on Neural Information Processing Systems (NeurIPS):
+%
+% - uses more LaTeX conventions
+% - line numbers at submission time replaced with aligned numbers from
+%   lineno package
+% - \nipsfinalcopy replaced with [final] package option
+% - automatically loads times package for authors
+% - loads natbib automatically; this can be suppressed with the
+%   [nonatbib] package option
+% - adds foot line to first page identifying the conference
+% - adds preprint option for submission to e.g. arXiv
+% - conference acronym modified
+%
+% Roman Garnett (garnett@wustl.edu) and the many authors of
+% nips15submit_e.sty, including MK and drstrip@sandia
+%
+% last revision: March 2023
+
 \NeedsTeXFormat{LaTeX2e}
+\ProvidesPackage{neurips_2023}[2023/03/31 NeurIPS 2023 submission/camera-ready style file]
+
+% declare final option, which creates camera-ready copy
+\newif\if@neuripsfinal\@neuripsfinalfalse
+\DeclareOption{final}{
+  \@neuripsfinaltrue
+}
+
+% declare nonatbib option, which does not load natbib in case of
+% package clash (users can pass options to natbib via
+% \PassOptionsToPackage)
+\newif\if@natbib\@natbibtrue
+\DeclareOption{nonatbib}{
+  \@natbibfalse
+}
+
+% declare preprint option, which creates a preprint version ready for
+% upload to, e.g., arXiv
+\newif\if@preprint\@preprintfalse
+\DeclareOption{preprint}{
+  \@preprinttrue
+}
 
 \ProcessOptions\relax
+
+% determine whether this is an anonymized submission
+\newif\if@submission\@submissiontrue
+\if@neuripsfinal\@submissionfalse\fi
+\if@preprint\@submissionfalse\fi
 
 % fonts
 \renewcommand{\rmdefault}{ptm}
 \renewcommand{\sfdefault}{phv}
+
+% change this every year for notice string at bottom
+\newcommand{\@neuripsordinal}{37th}
+\newcommand{\@neuripsyear}{2023}
+\newcommand{\@neuripslocation}{New Orleans}
+
+% acknowledgments
+\usepackage{environ}
+\newcommand{\acksection}{\section*{Acknowledgments and Disclosure of Funding}}
+\NewEnviron{ack}{%
+  \acksection
+  \BODY
+}
+
+
+% load natbib unless told otherwise
+\if@natbib
+  \RequirePackage{natbib}
+\fi
 
 % set page geometry
 \usepackage[verbose=true,letterpaper]{geometry}
 \AtBeginDocument{
   \newgeometry{
     textheight=9in,
-    textwidth=6.5in,
+    textwidth=5.5in,
     top=1in,
-    headheight=14pt,
+    headheight=12pt,
     headsep=25pt,
     footskip=30pt
   }
+  \@ifpackageloaded{fullpage}
+    {\PackageWarning{neurips_2023}{fullpage package not allowed! Overwriting formatting.}}
+    {}
 }
 
 \widowpenalty=10000
@@ -24,26 +92,6 @@
 \flushbottom
 \sloppy
 
-\usepackage{fancyhdr}
-\fancyhf{}
-\pagestyle{fancy}
-\renewcommand{\headrulewidth}{0pt}
-\fancyheadoffset{0pt}
-%\rhead{\scshape Deep Ritz revisited}
-\cfoot{\thepage}
-
-\RequirePackage{natbib}
-
-% modification to natbib citations
-\setcitestyle{authoryear,round,citesep={;},aysep={,},yysep={;}}
-
-
-%Handling Keywords
-\def\keywordname{{\bfseries %\emph
-Keywords}}%
-\def\keywords#1{\par\addvspace\medskipamount{\rightskip=0pt plus1cm
-\def\and{\ifhmode\unskip\nobreak\fi\ $\cdot$
-}\noindent\keywordname\enspace\ignorespaces#1\par}}
 
 % font sizes with reduced leading
 \renewcommand{\normalsize}{%
@@ -76,9 +124,8 @@ Keywords}}%
   \@startsection{section}{1}{\z@}%
                 {-2.0ex \@plus -0.5ex \@minus -0.2ex}%
                 { 1.5ex \@plus  0.3ex \@minus  0.2ex}%
-                {\large\scshape\raggedright\centering}%
+                {\large\bf\raggedright}%
 }
-\renewcommand \thesection {\@Roman\c@section}
 \providecommand{\subsection}{}
 \renewcommand{\subsection}{%
   \@startsection{subsection}{2}{\z@}%
@@ -86,7 +133,6 @@ Keywords}}%
                 { 0.8ex \@plus  0.2ex}%
                 {\normalsize\bf\raggedright}%
 }
-\renewcommand \thesubsection {\@arabic\c@section.\@arabic\c@subsection}
 \providecommand{\subsubsection}{}
 \renewcommand{\subsubsection}{%
   \@startsection{subsubsection}{3}{\z@}%
@@ -98,8 +144,8 @@ Keywords}}%
 \renewcommand{\paragraph}{%
   \@startsection{paragraph}{4}{\z@}%
                 {1.5ex \@plus 0.5ex \@minus 0.2ex}%
-                {-0.5em}%
-                {\scshape\bfseries\normalsize}%
+                {-1em}%
+                {\normalsize\bf}%
 }
 \providecommand{\subparagraph}{}
 \renewcommand{\subparagraph}{%
@@ -119,16 +165,16 @@ Keywords}}%
 \renewcommand{\textfraction     }{0.1}
 \renewcommand{\floatpagefraction}{0.7}
 
-\newlength{\@abovecaptionskip}\setlength{\@abovecaptionskip}{7\p@}
-\newlength{\@belowcaptionskip}\setlength{\@belowcaptionskip}{\z@}
+\newlength{\@neuripsabovecaptionskip}\setlength{\@neuripsabovecaptionskip}{7\p@}
+\newlength{\@neuripsbelowcaptionskip}\setlength{\@neuripsbelowcaptionskip}{\z@}
 
-\setlength{\abovecaptionskip}{\@abovecaptionskip}
-\setlength{\belowcaptionskip}{\@belowcaptionskip}
+\setlength{\abovecaptionskip}{\@neuripsabovecaptionskip}
+\setlength{\belowcaptionskip}{\@neuripsbelowcaptionskip}
 
 % swap above/belowcaptionskip lengths for tables
 \renewenvironment{table}
-  {\setlength{\abovecaptionskip}{\@belowcaptionskip}%
-   \setlength{\belowcaptionskip}{\@abovecaptionskip}%
+  {\setlength{\abovecaptionskip}{\@neuripsbelowcaptionskip}%
+   \setlength{\belowcaptionskip}{\@neuripsabovecaptionskip}%
    \@float{table}}
   {\end@float}
 
@@ -194,7 +240,7 @@ Keywords}}%
     \thispagestyle{empty}
     \@maketitle
     \@thanks
-    %\@notice
+    \@notice
   \endgroup
   \let\maketitle\relax
   \let\thanks\relax
@@ -202,40 +248,47 @@ Keywords}}%
 
 % rules for title box at top of first page
 \newcommand{\@toptitlebar}{
-  %\hrule height 4\p@
-  %\vskip 0.25in
-  %\vskip -\parskip%
+  \hrule height 4\p@
+  \vskip 0.25in
+  \vskip -\parskip%
 }
 \newcommand{\@bottomtitlebar}{
-  %\vskip 0.29in
-  %\vskip -\parskip
-  %\hrule height 1\p@
+  \vskip 0.29in
+  \vskip -\parskip
+  \hrule height 1\p@
   \vskip 0.09in%
 }
 
 % create title (includes both anonymized and non-anonymized versions)
 \providecommand{\@maketitle}{}
 \renewcommand{\@maketitle}{%
-  \vbox{
-    \hsize 1.03\textwidth
+  \vbox{%
+    \hsize\textwidth
     \linewidth\hsize
     \vskip 0.1in
     \@toptitlebar
     \centering
-    {\LARGE\sc \@title\par}
+    {\LARGE\bf \@title\par}
     \@bottomtitlebar
-    %\textsc{A preprint}\\
-    \vskip 0.1in
-    \def\And{%
-      \end{tabular}\hfil\linebreak[0]\hfil%
-      \begin{tabular}[t]{c}\bf\rule{\z@}{24\p@}\ignorespaces%
-    }
-    %\def\AND{%
-    %  \end{tabular}\hfil\linebreak[4]\hfil%
-    %  \begin{tabular}[t]{c}\bf\rule{\z@}{24\p@}\ignorespaces%
-    %}
-    \begin{tabular}[t]{c}\bf\rule{\z@}{24\p@}\@author\end{tabular}%
-  \vskip 0.4in %\@minus 0.1in \center{\today}   \vskip 0.2in
+    \if@submission
+      \begin{tabular}[t]{c}\bf\rule{\z@}{24\p@}
+        Anonymous Author(s) \\
+        Affiliation \\
+        Address \\
+        \texttt{email} \\
+      \end{tabular}%
+    \else
+      \def\And{%
+        \end{tabular}\hfil\linebreak[0]\hfil%
+        \begin{tabular}[t]{c}\bf\rule{\z@}{24\p@}\ignorespaces%
+      }
+      \def\AND{%
+        \end{tabular}\hfil\linebreak[4]\hfil%
+        \begin{tabular}[t]{c}\bf\rule{\z@}{24\p@}\ignorespaces%
+      }
+      \begin{tabular}[t]{c}\bf\rule{\z@}{24\p@}\@author\end{tabular}%
+    \fi
+    \vskip 0.3in \@minus 0.1in
   }
 }
 
@@ -250,14 +303,73 @@ Keywords}}%
 }
 
 % abstract styling
-%\renewenvironment{abstract}
-%{
-%  \centerline
-%  {\large \bfseries \scshape Abstract}
-%  \begin{quote}
-%}
-%{
-%  \end{quote}
-%}
+\renewenvironment{abstract}%
+{%
+  \vskip 0.075in%
+  \centerline%
+  {\large\bf Abstract}%
+  \vspace{0.5ex}%
+  \begin{quote}%
+}
+{
+  \par%
+  \end{quote}%
+  \vskip 1ex%
+}
+
+% handle tweaks for camera-ready copy vs. submission copy
+\if@preprint
+  \newcommand{\@noticestring}{%
+    Preprint. Under review.%
+  }
+\else
+  \if@neuripsfinal
+    \newcommand{\@noticestring}{%
+      \@neuripsordinal\/ Conference on Neural Information Processing Systems
+      (NeurIPS \@neuripsyear).%, \@neuripslocation.%
+    }
+  \else
+    \newcommand{\@noticestring}{%
+      Submitted to \@neuripsordinal\/ Conference on Neural Information
+      Processing Systems (NeurIPS \@neuripsyear). Do not distribute.%
+    }
+
+    % hide the acknowledgements
+    \NewEnviron{hide}{}
+    \let\ack\hide
+    \let\endack\endhide
+
+    % line numbers for submission
+    \RequirePackage{lineno}
+    \linenumbers
+
+    % fix incompatibilities between lineno and amsmath, if required, by
+    % transparently wrapping linenomath environments around amsmath
+    % environments
+    \AtBeginDocument{%
+      \@ifpackageloaded{amsmath}{%
+        \newcommand*\patchAmsMathEnvironmentForLineno[1]{%
+          \expandafter\let\csname old#1\expandafter\endcsname\csname #1\endcsname
+          \expandafter\let\csname oldend#1\expandafter\endcsname\csname end#1\endcsname
+          \renewenvironment{#1}%
+                          {\linenomath\csname old#1\endcsname}%
+                          {\csname oldend#1\endcsname\endlinenomath}%
+        }%
+        \newcommand*\patchBothAmsMathEnvironmentsForLineno[1]{%
+          \patchAmsMathEnvironmentForLineno{#1}%
+          \patchAmsMathEnvironmentForLineno{#1*}%
+        }%
+        \patchBothAmsMathEnvironmentsForLineno{equation}%
+        \patchBothAmsMathEnvironmentsForLineno{align}%
+        \patchBothAmsMathEnvironmentsForLineno{flalign}%
+        \patchBothAmsMathEnvironmentsForLineno{alignat}%
+        \patchBothAmsMathEnvironmentsForLineno{gather}%
+        \patchBothAmsMathEnvironmentsForLineno{multline}%
+      }
+      {}
+    }
+  \fi
+\fi
+
 
 \endinput
