--- a/paper/sections/laplacian_feedforward_nn.tex
+++ b/paper/sections/laplacian_feedforward_nn.tex
@@ -126,7 +126,7 @@ For linear layers, convolutional layers, and ReLU layers, it is zero.
   }
   \caption{Computation graph of a sequential neural network's Laplacian $\Delta u$ with $u \in \sR$.
     Arrows indicate dependencies between intermediates.
-    Note that $\vz^{(0)}\coloneqq \vx$, $\vz^{(L)} \coloneqq u$, $\grad_uu = 1$, and $\gradsquared{u}u = \vzero$.
+    Note that $\vz^{(0)} \coloneqq \vx$, $\vz^{(L)} \coloneqq u$, $\grad{u}u = 1$, and $\gradsquared{u}u = \vzero$.
     For the Gramian, we are interested in how the neural network parameters enter the Laplacian's computation.
     They are used during (i) the forward pass, (ii) the backward pass for the gradient, and (iii) the backward pass for the Hessian.}\label{fig:hbp-dependencies}
 \end{figure}
@@ -158,8 +158,19 @@ Some insights while creating \Cref{fig:hbp-dependencies}:
 
 \begin{figure}[t]
   \centering
-  \includegraphics[width=0.6\linewidth]{figures/HBP_graph_weight.png}
-  \caption{Direct children of the weight matrix of a single layer for the computation graph of the Laplacian.}\label{fig:laplacian-graph-weight}
+  \begin{minipage}[b]{0.495\linewidth}
+    \centering
+    \resizebox{\linewidth}{!}{%
+      \input{figures/computation_graph_laplacian_linear.tex}
+    }
+  \end{minipage}
+  \hfill
+  \begin{minipage}[b]{0.495\linewidth}
+    \caption{Direct dependencies of a linear layer's weight matrix in the Laplacian's computation graph.
+      There are three direct children: (i) The layer's output from the forward pass, (ii) the Laplacian's gradient w.r.t.\,the layer's input from the gradient backpropagation, and (iii) the Laplacian's Hessian w.r.t.\,the layer's input from the Hessian backpropagation.
+      The gradients $\grad{\mW^{(i)}}\Delta u$ required for the Gramian are the vector-Jacobian products accumulated over those children.
+    }\label{fig:laplacian-graph-weight}
+  \end{minipage}
 \end{figure}
 
 \paragraph{Hessian backpropagation through nonlinear layers}
