[TEX] Describe current mismatch for bias contributions

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -95,3 +95,19 @@
   booktitle =    {Advances in Neural Information Processing Systems (NeurIPS)},
   year =         2023,
 }
+
+@article{amari2000natural,
+  author =       {Amari, Shun-Ichi},
+  year =         2000,
+  title =        {Natural Gradient Works Efficiently in Learning},
+  journal =      {Neural Computation},
+}
+
+@inproceedings{arora2018understanding,
+  title =        {Understanding Deep Neural Networks with Rectified Linear
+                  Units},
+  author =       {Raman Arora and Amitabh Basu and Poorya Mianjy and Anirbit
+                  Mukherjee},
+  booktitle =    {International Conference on Learning Representations (ICLR)},
+  year =         2018,
+}
