[REF] Resolve misunderstanding when analyzing the Gramian blocks

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -97,6 +97,8 @@ This subsection describes the Jacobians of the operations with the weight matrix
 a linear layer during the computation of the Laplacian and ends by providing an
 equation for the Gramian block.
 
+\toodoo{Propose ways to Kronecker-approximate the terms from identical children in to a single Kronecker product.}
+
 \subsection{Kroneckerfactored Approximate Gramian (KFAG)}
 
 This subsection describes the Kronecker approximation we propose for the per-layer Gramian.
@@ -147,7 +149,7 @@ Ideas:
 \end{itemize}
 
 \begin{ack} % automatically suppressed in anonymized submission
-  Acknowledgments go here.
+  The authors thank Runa Eschenhagen for insightful discussions on the relation to KFAC for weight sharing layers.
 \end{ack}
 
 \bibliography{references}
